@@ -1,6 +1,6 @@
 <!-- ***** BEGIN LICENSE BLOCK *****
   -
-  - Copyright (C) 2017 Marc Ruiz Altisent. All rights reserved.
+  - Copyright (C) 2018 Marc Ruiz Altisent. All rights reserved.
   -
   - This file is part of FoxReplace.
   -
@@ -74,6 +74,10 @@
             <span class="i18n">options.export</span>
           </button>
         </div>
+        <button id="resetColumns" class="ui button">
+          <i class="undo icon"></i>
+          <span class="i18n">options.resetColumns</span>
+        </button>
       </p>
       <div id="listGrid" class="ag-theme-fresh"></div>
     </div>
